# AILed

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: ARCHITECTURE_DDD.md  CMakeLists.txt  idf_component.yml  main.c
main/application/ports/: device_boot_ports.h  integration_boot_ports.h
main/application/services/: agent_runtime_service.c  agent_runtime_service.h  app_lifecycle_service.c  app_lifecycle_service.h  conversation_payload_mapper.c  conversation_payload_mapper.h  ddd_regression_checks.c  ddd_regression_checks.h  device_boot_service.c  device_boot_service.h  integration_boot_service.c  integration_boot_service.h  ota_runtime_service.c  ota_runtime_service.h
main/domain/agent/: system_prompt_policy.c  system_prompt_policy.h
main/domain/conversation/: response_route_policy.c  response_route_policy.h
main/domain/device/: indicator_policy.c  indicator_policy.h
main/domain/ota/: ota_policy.c  ota_policy.h
main/domain/ports/: agent_runtime_ports.h  app_runtime_ports.h  ota_runtime_ports.h
main/domain/system/: boot_policy.c  boot_policy.h
main/infrastructure/ai/: agent.c  agent.h
main/infrastructure/config/: app_config.c  app_config.h
main/infrastructure/device/: led_strip_tool.c  led_strip_tool.h
main/infrastructure/integration/feishu/: feishu_bot.c  feishu_bot.h
main/infrastructure/messaging/: message_bus.c  message_bus.h
main/infrastructure/network/: config_mode.c  config_mode.h  wifi_manager.c  wifi_manager.h
main/infrastructure/ota/: esp_ota_manager.c  esp_ota_manager.h
main/infrastructure/runtime/: default_agent_runtime_ports.c  default_agent_runtime_ports.h  default_ota_runtime_ports.c  default_ota_runtime_ports.h  default_runtime_ports.c  default_runtime_ports.h
main/infrastructure/startup/: system_startup.c  system_startup.h
main/infrastructure/tools/: animation_downloader.c  animation_downloader.h  animation_player.c  animation_player.h  animation_protocol.c  animation_protocol.h  tool_builtins.c  tool_registry.c  tool_registry.h
spiffs_data/config/: SKILLS.md  SOUL.md  USER.md
